<resources>
    <string name="app_name">ARNOLD</string>
    <string name="options">Επιλογές</string>
    <string name="mySchedule">Το πρόγραμμα μου</string>
    <string name="myBody">Το Σώμα μου</string>
    <string name="myProgress">Η πρόοδος μου</string>
    <string name="myGym">Το Γυμναστήριο μου</string>
    <string name="myMusic">Η μουσική μου</string>
    <string name="myFriends">Οι φίλοι μου</string>
    <string name="gender">Φύλο</string>
    <string name="man">Άνδρας</string>
    <string name="woman">Γυναίκα</string>
    <string name="weight">Βάρος</string>
    <string name="height">Ύψος</string>
    <string name="age">Ηλικία</string>
    <string name="workoutsPerWeek">Προπονήσεις / εβδομάδα</string>
    <string name="lessWeight">Ελλιποβαρής</string>
    <string name="normalWeight">"Κανονικό βάρος"</string>
    <string name="overweight">"Υπέρβαρος/η"</string>
    <string name="obese">"Παχυσαρκία"</string>
    <string name="idealBMI1924">"19-24"</string>
    <string name="idealBMI2025">"20-25"</string>
    <string name="idealBMI2126">"21-26"</string>
    <string name="idealBMI2227">"22-27"</string>
    <string name="idealBMI2328">"23-28"</string>
    <string name="idealBMI2429">"24-29"</string>
    <string name="info">Πληροφορίες</string>
    <string name="subscription">Συνδρομή</string>
    <string name="my_gym_name_label">Όνομα</string>
    <string name="my_gym_address_label">Διεύθυνση</string>
    <string name="my_gym_address_hint">διεύθυνση γυμναστηρίου</string>
    <string name="my_gym_name_hint">όνομα γυμναστηρίου</string>
    <string name="my_gym_phone_label">Τηλέφωνο</string>
    <string name="my_gym_phone_hint">τηλέφωνο γυμναστηρίου</string>
    <string name="my_gym_rating_label">Βαθμολογία</string>
    <string name="my_gym_rating_hint">βαθμολογία γυμναστηρίου</string>
    <string name="my_gym_website_label">Ιστοσελίδα</string>
    <string name="my_gym_website_hint">ιστοσελίδα γυμναστηρίου</string>
    <string name="my_gym_subscription_label">Συνδρομή</string>
    <string name="my_gym_subscription_hint">ποσό</string>
    <string name="my_gym_registration_label">Εγγραφή</string>
    <string name="my_gym_registration_hint">ημερομηνία</string>
    <string name="title_activity_add_progress">AddProgressActivity</string>
    <string name="add_progress">Προσθήκη Προόδου</string>
    <string name="neck">Λαιμός</string>
    <string name="waist">Μέση</string>
    <string name="hips">Γοφοί</string>
    <string name="fat_percentage">Ποσοστό Λίπους</string>
    <string name="centimeters">cm</string>
    <string name="percentage">%</string>
    <string name="myProgram">Το πρόγραμμα μου</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
