<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/my_gym_name_label"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/my_gym_name"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center_vertical|end"
                android:hint="@string/my_gym_name_hint"
                android:background="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/my_gym_address_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/my_gym_address"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center_vertical|end"
                android:hint="@string/my_gym_address_hint"
                android:background="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/my_gym_phone_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/my_gym_phone"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center_vertical|end"
                android:hint="@string/my_gym_phone_hint"
                android:background="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/my_gym_rating_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/my_gym_rating"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center_vertical|end"
                android:hint="@string/my_gym_rating_hint"
                android:background="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/my_gym_website_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/my_gym_website"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center_vertical|end"
                android:hint="@string/my_gym_website_hint"
                android:background="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>