<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyGymActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_before_white_48dp"
        app:popupTheme="@style/MoreMenu"
        app:title="@string/myGym">

    </android.support.v7.widget.Toolbar>

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ScrollView
        android:id="@+id/my_gym_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@android:color/darker_gray"
                android:fontFamily="@font/roboto"
                android:padding="10sp"
                android:text="@string/info"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <include layout="@layout/my_gym_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@android:color/darker_gray"
                android:fontFamily="@font/roboto"
                android:padding="10sp"
                android:text="@string/subscription"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <include layout="@layout/subscription" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>