<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/my_gym_registration_label"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/my_gym_subscription"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_marginRight="3sp"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical|end"
                android:textSize="18sp"
                android:textStyle="bold"
                android:hint="@string/my_gym_registration_hint"
                android:layout_weight="1.1"/>

            <ImageButton
                android:id="@+id/date_picker"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:src="@drawable/ic_date_range_black_24dp"
                android:background="@android:color/transparent"
                android:layout_weight="0.2"
                android:padding="0sp"
                android:layout_margin="0sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/my_gym_subscription_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/my_gym_registration"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3sp"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical|end"
                android:background="@android:color/transparent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:hint="ποσό"
                android:layout_weight="1.1"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="€"
                android:layout_weight="0.2" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>