<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.7"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/age"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/age_spinner"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.7"
                    android:gravity="end|center_vertical" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:text="yrs"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/weight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/weight_spinner"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.7"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:text="kg"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/height"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/height_spinner"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.7"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:text="cm"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="2sp"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/workoutsPerWeek"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/workouts_per_week_spinner"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.7"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>